# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: arrow.py  clock.py  db_connection.py  enemy.py  entity.py  event_queue.py  floor.py  gameloop.py  gui.py  level.py  main.py  menuloop.py  mixer.py  objects.py  player.py  ranger.py  renderer.py  slime.py  spritesheet.py  stairs.py  state.db  testi.py  wall.py
src/tests/: arrow_hit_test.py  enemy_bfs_test.py  enemy_turn_test.py  level_test.py  player_test.py  slime_dies_test.py
