[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Leevi Kokkinen <leevi.kokkinen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
